feat: implement base bloc architecture for state management
Add base event, state, and bloc classes for form, load, and pagination
Create widget components for common bloc patterns
Add required dependencies in pubspec.yaml
Remove outdated test file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^8.1.4
+  equatable: ^2.0.5
+  iyam_core:
+    path: ../iyam_core
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
