--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,7 @@ dependencies:
     sdk: flutter
   bloc: ^8.1.4
   equatable: ^2.0.5
-  iyam_core:
-    path: ../iyam_core
+  iyam_core: ^0.1.0
   flutter_bloc: ^8.1.6
 
 dev_dependencies:
